# SimpleString

./: .clang-format  .cproject  .dockerignore  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  CROSS_COMPILATION.md  Dockerfile  Dockerfile.quick  Goals.md  LICENSE  README.md  TODO.md  build-all-on-docker.sh  build-all-platforms.sh  build-all.sh  build-clean.ps1  build-clean.sh  build-llvm-ir.sh  build-locally.sh  build-quick.ps1  build-quick.sh  build-release.ps1  build-release.sh  compile_commands.json  docker-build.sh  docker-entrypoint.sh  docker-quick-build.sh  release_notes.md
.github/workflows/: build.yml  post-release-testing.yml  quick-build.yml  release.yml
build-linux-aarch64-gcc/: Makefile
build-linux-x86_64-clang/: Makefile  sstring_tests
build-linux-x86_64-gcc/: Makefile  sstring_tests
build-llvm-ir/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  sstring_tests[1]_include.cmake
build-windows-x86_64-mingw/: Makefile
cmake/: aarch64-linux-gcc.cmake  linux-aarch64-gcc.cmake  linux-x86_64-clang.cmake  linux-x86_64-gcc.cmake  llvm-ir-config.cmake  macos-aarch64.cmake  macos-x86_64.cmake  mingw-w64-x86_64.cmake  msvc-x64.cmake  windows-x86_64-clang.cmake  windows-x86_64-mingw.cmake  windows-x86_64-msvc-cross.cmake  windows-x86_64-msvc.cmake  x86_64-linux-clang.cmake
cmake/common/: base.cmake  linux.cmake  llvm_ir.cmake  macos.cmake  windows.cmake
cmake/common/compilers/: clang.cmake
cmake/toolchains/: linux-aarch64-gcc.cmake  linux-x86_64-clang.cmake  linux-x86_64-gcc.cmake  macos-aarch64.cmake  macos-x86_64.cmake  windows-x86_64-mingw.cmake  windows-x86_64-msvc.cmake
cmake/toolchains/common/: base.cmake  linux.cmake  windows.cmake
cmake/toolchains/common/compilers/: gcc.cmake  msvc.cmake
config/: Dockerfile
config/cmake/: mingw-w64-x86_64.cmake
config/templates/: docker-build.sh
docs/: CROSS_COMPILATION.md
docs/api/: README.md
docs/scripts/: build-llvm-ir.md  build-locally.md
docs/tasks/: Task-006--ImproveCoverage.md
include/: char.hpp  code_point.hpp  compare_result.hpp  encoding.hpp  index.hpp  regex.hpp  size.hpp  sstring.hpp  string.hpp  unicode_category.hpp  unicode_category_enum.hpp  unicode_data.hpp  unicode_util.hpp
plan/: Development.md  Goals.md  TODO.md
plan/tasks/: Task-001--Initial.md  Task-006--ReorganizeBuild.md  Task-007--CodePoinAt.md  Task-008--SubString.md  Task-009--ValueOf.md  Task-010--IndexOf.md  Task-011--StringMatching.md  Task-012--StringTrimming.md  Task-013--StringReplaceSplit.md  Task-014--Regex.md  Task-015--GetBytes.md  Task-016--Post-release-testing.md  Task-016--StringFormat.md  Task-017--Remove-Boost-dependency-from-regex.hpp.md  Task-018--Remove-Boost-dependency-from-string.hpp.md  Task-019--Add-LLVM-IR-Build-Target.md  Tast-006--ReorganizeBuild.md
scripts/: test-deb-package-simple.sh  test-deb-package.sh  test-rpm-package.sh
scripts/deb-test/: Makefile  test.cpp  test_app
src/: char.cpp  code_point.cpp  compare_result.cpp  encoding.cpp  index.cpp  main.cpp  regex.cpp  simple_unicode.cpp  sstring.cpp  sstring_char.cpp  string.cpp  unicode_category.cpp
src/tasks/: Task-001.md  Task-002--CompareResult.md  Task-003--StringSharing.md  Task-004--IsEmpty.md  Task-005--CharAndCodePoint.md
tasks/: Task-002--CompareResult.md  Tast-006--ReorganizeBuild.md
tests/: char_test.cpp  code_point_test.cpp  compare_result_test.cpp  index_test.cpp  regex_test.cpp  sstring_char_access_test.cpp  sstring_char_test.cpp  sstring_invalid_utf8_test.cpp  sstring_sharing_test.cpp  sstring_test.cpp  string_char_access_test.cpp  string_char_test.cpp  string_encoding_test.cpp  string_format_test.cpp  string_indexof_test.cpp  string_invalid_utf8_test.cpp  string_matching_test.cpp  string_replace_test.cpp  string_sharing_test.cpp  string_substring_test.cpp  string_test.cpp  string_trimming_test.cpp  string_valueof_test.cpp  unicode_category_test.cpp
